--- a/server/.gitignore
+++ b/server/.gitignore
@@ -20,7 +20,18 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+
+/client.env
+/client.DS_Store
+/client.env.local
+/client.env.development.local
+/client.env.test.local
+/client.env.production.local
+/client.env.development
+
 
 
 npm-debug.log*
+
 
